# lesserapi

./: LICENSE  README.md  pyproject.toml  setup.py
lesserapi/: __init__.py
lesserapi/core/: __init__.py
lesserapi/exceptions/: __init__.py
lesserapi/github/: __init__.py
lesserapi/github/exceptions/: __init__.py
lesserapi/github/handlers/: __init__.py
lesserapi/github/handlers/request_handler/: __init__.py
lesserapi/github/handlers/user_handler/: __init__.py
lesserapi/github/scraper/: __init__.py
lesserapi/handlers/: __init__.py
lesserapi/handlers/request_handler/: __init__.py
lesserapi/handlers/user_handler/: __init__.py
lesserapi/steam/: __init__.py
lesserapi/steam/scraper/: __init__.py
lesserapi/utils/: __init__.py
lesserapi/utils/update/: __init__.py
tests/: __init__.py
