[tool.poetry]
name = "lesserapi"
version = "1.1.18"
description = "A python Package API for gathering Users Information in some Platforms."
authors = ["Shervin <68682979+shervinbdndev@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "lesserapi"}]

[tool.poetry.dependencies]
python = "^3.11.3"
requests = "^2.28.1"
bs4 = "^0.0.1"
html5lib = "^1.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
